--- a/Carteleras.html
+++ b/Carteleras.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/css/EstiloPaginaCarteleras.css" />
   <link rel="stylesheet" type="text/css" href="/css/layout.css" />
   <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-  <link rel="icon" href="/imagenes\LogoUFC.ico">
+  <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
 
       <div class="eventosNumerados">
         <div>
-          <a href="/Carteleras/UFC292.html"><img src="imagenes\Sean O'Malley.jpg" /><img
+          <a href="/Carteleras/UFC292.html"><img src="imagenes/Sean O'Malley.jpg" /><img
               src="imagenes/Aljamain Sterling.jpg" /><br />
             <p>Sean O´Malley vs Aljamain Sterling</p>
             <br />UFC 292
