--- a/Carteleras/UFC280.html
+++ b/Carteleras/UFC280.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                 <a href="/https://www.youtube.com/watch?v=-xAKq2yWM3s&pp=ygUVb2xpdmVpcmEgdnMgbWFraGFjaGV2"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Oliveira vs Makhachev.jpg" alt="Oliveira vs Makhachev">
+                        <img src="/imagenes/Oliveira vs Makhachev.jpg" alt="Oliveira vs Makhachev">
                         <p>Charles Oliveira vs Islam Makhachev</p>
                     </button>
                 </a>
@@ -40,7 +40,7 @@
                 <a href="/https://www.youtube.com/watch?v=WPo7uOCArpg&pp=ygUVc3RlcmxpbmcgdnMgZGlsbGFzaGF3"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Sterling vs Dillashaw.jpg" alt="Sterling vs Dillashaw">
+                        <img src="/imagenes/Sterling vs Dillashaw.jpg" alt="Sterling vs Dillashaw">
                         <p>Aljamain Sterling vs TJ Dillashaw</p>
                     </button>
                 </a>
@@ -50,7 +50,7 @@
                 <a href="/https://www.youtube.com/watch?v=BVztNzi5zNw&pp=ygUZcGV0ciB5YW4gdnMgc2VhbiBvJ21hbGxleQ%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Yan vs O'Malley.jpg" alt="Yan vs O'Malley">
+                        <img src="/imagenes/Yan vs O'Malley.jpg" alt="Yan vs O'Malley">
                         <p>Petr Yan vs Sean O´Malley</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
                 <a href="/https://www.youtube.com/watch?v=BOAIEqdFOf0&pp=ygURZGFyaXVzaCB2cyBnYW1yb3Q%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Dariush vs Gamrot.jpg" alt="Dariush vs Gamrot">
+                        <img src="/imagenes/Dariush vs Gamrot.jpg" alt="Dariush vs Gamrot">
                         <p>Beneil Dariush vs Mateusz Gamrot</p>
                     </button>
                 </a>
