--- a/Carteleras/UFC281.html
+++ b/Carteleras/UFC281.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=5-WSAzluSeE&pp=ygUUYWRlc2FueWEgdnMgcGVyZWlyYSA%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Pereira vs Adesanya.jpg" alt="Pereira vs Adesanya">
+                        <img src="/imagenes/Pereira vs Adesanya.jpg" alt="Pereira vs Adesanya">
                         <p>Alex Pereira vs Israel Adesanya</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=7zVyd_q-lH8&pp=ygUQZXNwYXJ6YSB2cyB6aGFuZw%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Esparza vs Weili.jpg" alt="Esparza vs Weili">
+                        <img src="/imagenes/Esparza vs Weili.jpg" alt="Esparza vs Weili">
                         <p>Carla Esparza vs Zhang Weili</p>
                     </button>
                 </a>
@@ -52,7 +52,7 @@
                 <a href="/https://www.youtube.com/watch?v=nP1cAyBgpPg&pp=ygUTcG9pcmllciB2cyBjaGFuZGxlcg%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Poirier vs Chandler.jpg" alt="Poirier vs Chandler">
+                        <img src="/imagenes/Poirier vs Chandler.jpg" alt="Poirier vs Chandler">
                         <p>Dustin Poirier vs Michael Chandler</p>
                     </button>
                 </a>
@@ -61,7 +61,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=oChRMtn3_KA&pp=ygUSZWRnYXIgdnMgZ3V0aWVycmV6" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Edgar vs Gutierrez.jpg" alt="Edgar vs Gutierrez">
+                        <img src="/imagenes/Edgar vs Gutierrez.jpg" alt="Edgar vs Gutierrez">
                         <p>Frankie Edgar vs Chris Gutierrez</p>
                     </button>
                 </a>
