--- a/Carteleras/UFC282.html
+++ b/Carteleras/UFC282.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=IOiuzXGCA0A&pp=ygUhYmxhY2hvd2ljeiB2cyBhbmthbGFldiBoaWdobGlnaHRz"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Blachowicz vs Ankalaev.jpg" alt="Blachowicz vs Ankalaev">
+                        <img src="/imagenes/Blachowicz vs Ankalaev.jpg" alt="Blachowicz vs Ankalaev">
                         <p>Jan Blachowicz vs Magomed Ankalaev</p>
                     </button>
                 </a>
@@ -41,7 +41,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=J261J_MxEbg&pp=ygUScGltYmxldHQgdnMgZ29yZG9u" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Pimblett vs Gordon.jpg" alt="Pimblett vs Gordon">
+                        <img src="/imagenes/Pimblett vs Gordon.jpg" alt="Pimblett vs Gordon">
                         <p>Paddy Pimblett vs Jared Gordon</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
                 <a href="/https://www.youtube.com/watch?v=ysJ-Q5_UR7Q&pp=ygUVcG9uemluaWJiaW8gdnMgbW9yb25v"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Ponzinibbio vs Morono.jpg" alt="Ponzinibbio vs Morono">
+                        <img src="/imagenes/Ponzinibbio vs Morono.jpg" alt="Ponzinibbio vs Morono">
                         <p>Santiago Ponzinibbio vs Alex Morono</p>
                     </button>
                 </a>
@@ -61,7 +61,7 @@
                 <a href="/https://www.youtube.com/watch?v=f33qcBlb68M&pp=ygURdGlsbCB2cyBkdXBsZXNzaXM%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Till vs Du Plessis.jpg" alt="Till vs Du Plessis">
+                        <img src="/imagenes/Till vs Du Plessis.jpg" alt="Till vs Du Plessis">
                         <p>Darren Till vs Dricus Du Plessis</p>
                     </button>
                 </a>
