--- a/Carteleras/UFC283.html
+++ b/Carteleras/UFC283.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=h-jhKzcLsaQ&pp=ygUQdGVpeGVpcmEgdnMgaGlsbA%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Teixeira vs Hill.jpg" alt="Teixeira vs Hill">
+                        <img src="/imagenes/Teixeira vs Hill.jpg" alt="Teixeira vs Hill">
                         <p>Glover Teixeira vs Jamahall Hill</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=GPrzwbgg8yU&pp=ygUUZmlndWVpcmVkbyB2cyBtb3Jlbm8%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Figueiredo vs Moreno.jpg" alt="Figueiredo vs Moreno">
+                        <img src="/imagenes/Figueiredo vs Moreno.jpg" alt="Figueiredo vs Moreno">
                         <p>Deiveson Figueiredo vs Brandon Moreno</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=q0C7h0fcx8U&pp=ygUObWFnbnkgdnMgYnVybnM%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Burns vs Magny.jpg" alt="Burns vs Magny">
+                        <img src="/imagenes/Burns vs Magny.jpg" alt="Burns vs Magny">
                         <p>Gilbert Burns vs Neil Magny</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=KXzfK2sTGDo&pp=ygUPY3JhaWcgdnMgd2Fsa2Vy" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Craig vs Walker.jpg" alt="Craig vs Walker">
+                        <img src="/imagenes/Craig vs Walker.jpg" alt="Craig vs Walker">
                         <p>Paul Craig vs Johnny Walker</p>
                     </button>
                 </a>
