--- a/Carteleras/UFC284.html
+++ b/Carteleras/UFC284.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=OQef0jJ_k9U&pp=ygUYbWFraGFjaGV2IHZzIHZvbGthbm92c2tp"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Makhachev vs Volkanovski.jpg" alt="Makhachev vs Volkanovski">
+                        <img src="/imagenes/Makhachev vs Volkanovski.jpg" alt="Makhachev vs Volkanovski">
                         <p>Islam Makhachev vs Alexander Volkanovski</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=AOT4pqtAnrM&pp=ygUTcm9kcmlndWV6IHZzIGVtbWV0dA%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Rodriguez vs Emmett.jpg" alt="Rodriguez vs Emmett">
+                        <img src="/imagenes/Rodriguez vs Emmett.jpg" alt="Rodriguez vs Emmett">
                         <p>Yair Rodriguez vs Josh Emmett</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=oL2ZaPIdlt0&pp=ygUSbWFkZGFsZW5hIHZzIGJyb3du" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Maddalena vs Brown.jpg" alt="Maddalena vs Brown">
+                        <img src="/imagenes/Maddalena vs Brown.jpg" alt="Maddalena vs Brown">
                         <p>Jack Della Maddalena vs Randy Brown</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=6vmj6ymK6AE&pp=ygUOdGFmYSB2cyBwb3J0ZXI%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Tafa vs Porter.jpg" alt="Tafa vs Porter">
+                        <img src="/imagenes/Tafa vs Porter.jpg" alt="Tafa vs Porter">
                         <p>Justin Tafa vs Parker Porter</p>
                     </button>
                 </a>
