--- a/Carteleras/UFC286.html
+++ b/Carteleras/UFC286.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=ERVc7q6di1c&pp=ygUSZWR3YXJkcyB2cyB1c21hbiAz" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Edwards vs Usman.jpg" alt="Edwards vs Usman">
+                        <img src="/imagenes/Edwards vs Usman.jpg" alt="Edwards vs Usman">
                         <p>Leon Edwards vs Kamaru Usman 3</p>
                     </button>
                 </a>
@@ -41,7 +41,7 @@
                 <a href="/https://www.youtube.com/watch?v=8oZ1vF3xsqM&pp=ygURZ2FldGhqZSB2cyBmaXppZXY%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Gaethje vs Fiziev.jpg" alt="Gaethje vs Fiziev">
+                        <img src="/imagenes/Gaethje vs Fiziev.jpg" alt="Gaethje vs Fiziev">
                         <p>Justin Gaethje vs Rafael Fiziev</p>
                     </button>
                 </a>
@@ -50,7 +50,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/shorts/XgjztdRFIFg" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Nelson vs Barberena.jpg" alt="Nelson vs Barberena">
+                        <img src="/imagenes/Nelson vs Barberena.jpg" alt="Nelson vs Barberena">
                         <p>Gunnar Nelson vs Brian Barberena</p>
                     </button>
                 </a>
@@ -59,7 +59,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=x1pKsMz0TpQ&pp=ygUObWFpYSB2cyBvbmVpbGw%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Maia vs Oneill.jpg" alt="Maia vs Oneill">
+                        <img src="/imagenes/Maia vs Oneill.jpg" alt="Maia vs Oneill">
                         <p>Jennifer Maia vs Casey O´Neill</p>
                     </button>
                 </a>
