--- a/Carteleras/UFC287.html
+++ b/Carteleras/UFC287.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=cHiDs158oIc&pp=ygUVcGVyZWlyYSB2cyBhZGVzYW55YSAy"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Pereira vs Adesanya.jpg" alt="Pereira vs Adesanya">
+                        <img src="/imagenes/Pereira vs Adesanya.jpg" alt="Pereira vs Adesanya">
                         <p>Alex Pereira vs Israel Adesanya 2</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=rLqbpM3IV-k&pp=ygURbWFzdmlkYWwgdnMgYnVybnM%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Burns vs Masvidal.jpg" alt="Burns vs Masvidal">
+                        <img src="/imagenes/Burns vs Masvidal.jpg" alt="Burns vs Masvidal">
                         <p>Gilbert Burns vs Jorge Masvidal</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=hvGkA5YbFfk&pp=ygUNZm9udCB2cyB5YW5leg%3D%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Font vs Yanez.jpg" alt="Font vs Yanez">
+                        <img src="/imagenes/Font vs Yanez.jpg" alt="Font vs Yanez">
                         <p>Rob Font vs Adrian Yanez</p>
                     </button>
                 </a>
@@ -61,7 +61,7 @@
                 <a href="/https://www.youtube.com/watch?v=B8tLR32Ta4Y&pp=ygUWaG9sbGFuZCB2cyBwb256aW5pYmJpbw%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Holland vs Ponzinibbio.jpg" alt="Holland vs Ponzinibbio">
+                        <img src="/imagenes/Holland vs Ponzinibbio.jpg" alt="Holland vs Ponzinibbio">
                         <p>Kevin Holland vs Santiago Ponzinibbio</p>
                     </button>
                 </a>
