--- a/Carteleras/UFC288.html
+++ b/Carteleras/UFC288.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=CkuBi96yXwM&pp=ygUSc3RlcmxpbmcgdnMgY2VqdWRv" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Sterling vs Cejudo.jpg" alt="Sterling vs Cejudo">
+                        <img src="/imagenes/Sterling vs Cejudo.jpg" alt="Sterling vs Cejudo">
                         <p>Aljamain Sterling vs Henry Cejudo</p>
                     </button>
                 </a>
@@ -40,7 +40,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/shorts/MybY3qzPbx8" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Muhammad vs Burns.jpg" alt="Muhammad vs Burns">
+                        <img src="/imagenes/Muhammad vs Burns.jpg" alt="Muhammad vs Burns">
                         <p>Belal Muhammad vs Gilbert Burns</p>
                     </button>
                 </a>
@@ -49,7 +49,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=IIGoDBHRS0w&pp=ygUSYW5kcmFkZSB2cyB4aWFvbmFu" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Andrade vs Xiaonan.jpg" alt="Andrade vs Xiaonan">
+                        <img src="/imagenes/Andrade vs Xiaonan.jpg" alt="Andrade vs Xiaonan">
                         <p>Jessica Andrade vs Yan Xiaonan</p>
                     </button>
                 </a>
@@ -58,7 +58,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=_Ml8EhEZOaQ&pp=ygUPZXZsb2V2IHZzIGxvcGV6" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Evloev vs Lopes.jpg" alt="Evloev vs Lopes">
+                        <img src="/imagenes/Evloev vs Lopes.jpg" alt="Evloev vs Lopes">
                         <p>Movsar Evloev vs Diego Lopes</p>
                     </button>
                 </a>
