--- a/Carteleras/UFC289.html
+++ b/Carteleras/UFC289.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
                 <a href="/https://www.youtube.com/watch?v=nIuUo32Bq7w&pp=ygUTbnVuZXMgdnMgYWxkYW5hIDI4OQ%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Nunes vs Aldana.jpg" alt="Nunes vs Aldana">
+                        <img src="/imagenes/Nunes vs Aldana.jpg" alt="Nunes vs Aldana">
                         <p>Amanda Nunes vs Irene Aldana</p>
                     </button>
                 </a>
@@ -41,7 +41,7 @@
                 <a href="/https://www.youtube.com/watch?v=eSelU8-aEmY&pp=ygUTb2xpdmVpcmEgdnMgZGFyaXVzaA%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Oliveira vs Dariush.jpg" alt="Oliveira vs Dariush">
+                        <img src="/imagenes/Oliveira vs Dariush.jpg" alt="Oliveira vs Dariush">
                         <p>Charles Oliveira vs Beneil Dariush</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
                 <a href="/https://www.youtube.com/watch?v=WRktD9LpOmo&pp=ygUQbWFsb3R0IHZzIGZ1Z2l0dA%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Malott vs Fuggit.jpg" alt="Malott vs Fuggit">
+                        <img src="/imagenes/Malott vs Fuggit.jpg" alt="Malott vs Fuggit">
                         <p>Mike Malott vs Adam Fuggit</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=igbnjq1IXzM&pp=ygUPaWdlIHZzIGxhbmR3ZWhy" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Ige vs Landwehr.jpg" alt="Ige vs Landwehr">
+                        <img src="/imagenes/Ige vs Landwehr.jpg" alt="Ige vs Landwehr">
                         <p>Dan Ige vs Nate Landwehr</p>
                     </button>
                 </a>
