--- a/Carteleras/UFC290.html
+++ b/Carteleras/UFC290.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=RPcsiDSzFCs&pp=ygUddm9sa2Fub3Zza2kgdnMgeWFpciByb2RyaWd1ZXo%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Volkanovski vs Rodriguez.jpg" alt="Volkanovski vs Rodriguez">
+                        <img src="/imagenes/Volkanovski vs Rodriguez.jpg" alt="Volkanovski vs Rodriguez">
                         <p>Alexander Volkanovski vs Yair Rodriguez</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=7sj-snC5qWk&pp=ygUVbW9yZW5vIHZzIHBhbnRvamEgMjkw"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Moreno vs Pantoja.jpg" alt="Moreno vs Pantoja">
+                        <img src="/imagenes/Moreno vs Pantoja.jpg" alt="Moreno vs Pantoja">
                         <p>Brandon Moreno vs Alexandre Pantoja</p>
                     </button>
                 </a>
@@ -52,7 +52,7 @@
                 <a href="/https://www.youtube.com/watch?v=Ns8My2V_aiY&pp=ygUXd2hpdHRha2VyIHZzIGR1IHBsZXNzaXM%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Whittaker vs Du Plessis.jpg" alt="Whittaker vs Du Plessis">
+                        <img src="/imagenes/Whittaker vs Du Plessis.jpg" alt="Whittaker vs Du Plessis">
                         <p>Robert Whitaker vs Dricus Du Plessis</p>
                     </button>
                 </a>
@@ -62,7 +62,7 @@
                 <a href="/https://www.youtube.com/watch?v=oc77tSH6dE4&pp=ygUQdHVybmVyIHZzIGhvb2tlcg%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Turner vs Hooker.jpg" alt="Turner vs Hooker">
+                        <img src="/imagenes/Turner vs Hooker.jpg" alt="Turner vs Hooker">
                         <p>Jalin Turner vs Dan Hooker</p>
                     </button>
                 </a>
