--- a/Carteleras/UFC291.html
+++ b/Carteleras/UFC291.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=3FIGU4D9DlY&pp=ygUUcG9pcmllciB2cyBnYWV0aGplIDI%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Poirier vs Gaethje.jpg" alt="Poirier vs Gaethje">
+                        <img src="/imagenes/Poirier vs Gaethje.jpg" alt="Poirier vs Gaethje">
                         <p>Dustin Poirier vs Justin Gaethje</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=d-SdwrUFzY0&pp=ygUVYmxhY2hvd2ljeiB2cyBwZXJlaXJh"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Blachowicz vs Pereira.jpg" alt="Blachowicz vs Pereira">
+                        <img src="/imagenes/Blachowicz vs Pereira.jpg" alt="Blachowicz vs Pereira">
                         <p>Jan Blachowicz vs Alex Pereira</p>
                     </button>
                 </a>
@@ -52,7 +52,7 @@
                 <a href="/https://www.youtube.com/watch?v=xBmJxQ2RfPo&pp=ygUQbGV3aXMgdnMgZGUgbGltYQ%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Lewis vs De Lima.jpg" alt="Lewis vs De Lima">
+                        <img src="/imagenes/Lewis vs De Lima.jpg" alt="Lewis vs De Lima">
                         <p>Derrick Lewis vs Marcos Rogerio De Lima</p>
                     </button>
                 </a>
@@ -62,7 +62,7 @@
                 <a href="/https://www.youtube.com/watch?v=aYZgNn1aaaY&pp=ygURZmVyZ3Vzb24gdnMgZ3JlZW4%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Ferguson vs Green.jpg" alt="Ferguson vs Green">
+                        <img src="/imagenes/Ferguson vs Green.jpg" alt="Ferguson vs Green">
                         <p>Tony Ferguson vs Bobby Green</p>
                     </button>
                 </a>
