--- a/Carteleras/UFC292.html
+++ b/Carteleras/UFC292.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=m0C_6mzXyxY&pp=ygUUc3RlcmxpbmcgdnMgbydtYWxsZXk%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Sterling vs O'Malley.jpg" alt="Sterling vs O'Malley">
+                        <img src="/imagenes/Sterling vs O'Malley.jpg" alt="Sterling vs O'Malley">
                         <p>Aljamain Sterling vs Sean O´Malley</p>
                     </button>
                 </a>
@@ -41,7 +41,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=6KRBlP9-17U&pp=ygUOemhhbmcgdnMgbGVtb3M%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Weili vs Lemos.jpg" alt="Weili vs Lemos">
+                        <img src="/imagenes/Weili vs Lemos.jpg" alt="Weili vs Lemos">
                         <p>Zhang Weili vs Amanda Lemos</p>
                     </button>
                 </a>
@@ -50,7 +50,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=aKzDlhzLnHo&pp=ygUObWFnbnkgdnMgR2Fycnk%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Magny vs Garry.jpg" alt="Magny vs Garry">
+                        <img src="/imagenes/Magny vs Garry.jpg" alt="Magny vs Garry">
                         <p>Neil Magny vs Ian Machado Garry</p>
                     </button>
                 </a>
@@ -59,7 +59,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=ojSRGbqFw28&pp=ygUOdmVyYSB2cyBtdW5ob3o%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Vera vs Munhoz.jpg" alt="Vera vs Munhoz">
+                        <img src="/imagenes/Vera vs Munhoz.jpg" alt="Vera vs Munhoz">
                         <p>Marlon Vera vs Pedro Munhoz</p>
                     </button>
                 </a>
