--- a/Carteleras/UFC293.html
+++ b/Carteleras/UFC293.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
                 <a href="/https://www.youtube.com/watch?v=m3jNtOxIyDA&t=812s&pp=ygUWYWRlc2FueWEgdnMgc3RyaWNrbGFuZA%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Adesanya vs Strickland.jpg" alt="Adesanya vs Strickland">
+                        <img src="/imagenes/Adesanya vs Strickland.jpg" alt="Adesanya vs Strickland">
                         <p>Israel Adesanya vs Sean Strickland</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/shorts/UEyo10sNxag" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Tuivasa vs Volkov.jpg" alt="Tuivasa vs Volkov">
+                        <img src="/imagenes/Tuivasa vs Volkov.jpg" alt="Tuivasa vs Volkov">
                         <p>Tai tuivasa vs Alexander Volkov</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=fTVHN4uDfPo&pp=ygUSa2FwZSB2cyBkb3Mgc2FudG9z" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Kape vs Dos Santos.jpg" alt="Kape vs Dos Santos">
+                        <img src="/imagenes/Kape vs Dos Santos.jpg" alt="Kape vs Dos Santos">
                         <p>Manel Kape vs Felipe Dos Santos</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=GUkAIlBL2Eo&pp=ygUMdGFmYSB2cyBsYW5l" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Lane vs Tafa.jpg" alt="Lane vs Tafa">
+                        <img src="/imagenes/Lane vs Tafa.jpg" alt="Lane vs Tafa">
                         <p>Austin Lane vs Justin Tafa</p>
                     </button>
                 </a>
