--- a/Carteleras/UFC294.html
+++ b/Carteleras/UFC294.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=W12mp7cPm_I&pp=ygUabWFraGFjaGV2IHZzIHZvbGthbm92c2tpIDI%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Makhachev vs Volkanovski.jpg" alt="Makhachev vs Volkanovski">
+                        <img src="/imagenes/Makhachev vs Volkanovski.jpg" alt="Makhachev vs Volkanovski">
                         <p>Islam Makhachev vs Alexander Volkanovski 2</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=KH6tjzFlKUQ&pp=ygUQdXNtYW4gdnMgY2hpbWFldg%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Usman vs Chimaev.jpg" alt="Usman vs Chimaev">
+                        <img src="/imagenes/Usman vs Chimaev.jpg" alt="Usman vs Chimaev">
                         <p>Kamaru Usman vs Khamzat Chimaev</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=eyf9VmtXGDQ&pp=ygUSYW5rYWxhZXYgdnMgd2Fsa2Vy" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Ankalaev vs Walker.jpg" alt="Ankalaev vs Walker">
+                        <img src="/imagenes/Ankalaev vs Walker.jpg" alt="Ankalaev vs Walker">
                         <p>JMagomed Ankalaev vs Johnny Walker</p>
                     </button>
                 </a>
@@ -60,7 +60,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=yexRbWELZ6c&pp=ygUSYWxpc2tlcm92IHZzIGFsdmVz" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Aliskerov vs Alves.jpg" alt="Aliskerov vs Alves">
+                        <img src="/imagenes/Aliskerov vs Alves.jpg" alt="Aliskerov vs Alves">
                         <p>Ikram Aliskerov vs Warlley Alves</p>
                     </button>
                 </a>
