--- a/Carteleras/UFC295.html
+++ b/Carteleras/UFC295.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <a href="/https://www.youtube.com/watch?v=egMFwJaKIRw&pp=ygUUcHJvY2hhemthIHZzIHBlcmVpcmE%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Pereira vs Prochazka.jpg" alt="Pereira vs Prochazka">
+                        <img src="/imagenes/Pereira vs Prochazka.jpg" alt="Pereira vs Prochazka">
                         <p>Jiri Prochazka vs Alex Pereira</p>
                     </button>
                 </a>
@@ -42,7 +42,7 @@
                 <a href="/https://www.youtube.com/watch?v=pMFpg_nWy34&pp=ygUdcGF2bG92aWNoIHZzIGFzcGluYWxsIHJlc3VtZW4%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Pavlovich Vs Aspinall.jpg" alt="Pavlovich Vs Aspinall">
+                        <img src="/imagenes/Pavlovich Vs Aspinall.jpg" alt="Pavlovich Vs Aspinall">
                         <p>Sergei Pavlovich vs Tom Aspinall</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=r6mDBZe20No&pp=ygUPYW5kcmFkZSB2cyBkZXJu" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Andrade vs Dern.jpg" alt="Andrade vs Dern">
+                        <img src="/imagenes/Andrade vs Dern.jpg" alt="Andrade vs Dern">
                         <p>Jessica Andrade vs Mackenzie Dern</p>
                     </button>
                 </a>
@@ -61,7 +61,7 @@
                 <a href="/https://www.youtube.com/watch?v=g7j9CyUAhPI&pp=ygUWZnJldm9sYSB2cyBzYWludCBkZW5pcw%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Frevola vs Saint-Denis.jpg" alt="Frevola vs Saint-Denis">
+                        <img src="/imagenes/Frevola vs Saint-Denis.jpg" alt="Frevola vs Saint-Denis">
                         <p>Matt Frevola vs Benoit Saint-Denis</p>
                     </button>
                 </a>
