--- a/Carteleras/UFC296.html
+++ b/Carteleras/UFC296.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <a href="/https://www.youtube.com/watch?v=rIlgiCISkB4&pp=ygUUZWR3YXJkcyB2cyBjb3Zpbmd0b24%3D"
                 target="_BLANK">
                 <button>
-                    <img src="/imagenes\Edwards vs Covington.jpg" alt="Edwards vs Colvington">
+                    <img src="/imagenes/Edwards vs Covington.jpg" alt="Edwards vs Colvington">
                     <p>Leon Edwards vs Colby Covington</p>
                 </button>
             </a>
@@ -40,7 +40,7 @@
         <div class="fight-card">
             <a href="/https://www.youtube.com/watch?v=cSREacQd25Q&pp=ygUVcGFudG9qYSB2cyByb3l2YWwgMjk2" target="_BLANK">
                 <button>
-                    <img src="/imagenes\Pantoja vs Royval.jpg" alt="Pantoja vs Royval">
+                    <img src="/imagenes/Pantoja vs Royval.jpg" alt="Pantoja vs Royval">
                     <p>Alexandre Pantoja vs Brandon Royval</p>
                 </button>
             </a>
@@ -49,7 +49,7 @@
         <div class="fight-card">
             <a href="/https://www.youtube.com/watch?v=6J12FCpFNUY&pp=ygUVcmFraG1vbm92IHZzIHRob21wc29u" target="_BLANK">
                 <button>
-                    <img src="/imagenes\Thompson vs Rakhmonov.jpg" alt="Thompson vs Rakhmonov">
+                    <img src="/imagenes/Thompson vs Rakhmonov.jpg" alt="Thompson vs Rakhmonov">
                     <p>Stephen Thompson vs Shavkat Rakhmonov</p>
                 </button>
             </a>
@@ -59,7 +59,7 @@
             <a href="/https://www.youtube.com/watch?v=rlj2HQcMXd8&pp=ygUUZmVyZ3Vzb24gdnMgcGltYmxldHQ%3D"
                 target="_BLANK">
                 <button>
-                    <img src="/imagenes\Ferguson vs Pimblett.jpg" alt="Fergusson vs Pimblett">
+                    <img src="/imagenes/Ferguson vs Pimblett.jpg" alt="Fergusson vs Pimblett">
                     <p>Tony Ferguson vs Paddy Pimblett</p>
                 </button>
             </a>
