--- a/Carteleras/UFC297.html
+++ b/Carteleras/UFC297.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Strickland vs Du Plessis.jpg" alt="Strickland vs Du Plessis">
+                    <img src="/imagenes/Strickland vs Du Plessis.jpg" alt="Strickland vs Du Plessis">
                     <p>Sean Strickland vs Dricus Du Plessis</p>
                 </button>
             </a>
@@ -38,7 +38,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Pennington vs Silva.jpg" alt="Pennington vs Silva">
+                    <img src="/imagenes/Pennington vs Silva.jpg" alt="Pennington vs Silva">
                     <p>Raquel Pennington vs Mayra Bueno Silva</p>
                 </button>
             </a>
@@ -47,7 +47,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Magny vs Malott.jpg" alt="Magny vs Malott">
+                    <img src="/imagenes/Magny vs Malott.jpg" alt="Magny vs Malott">
                     <p>Neil Magny vs Mike Malott</p>
                 </button>
             </a>
@@ -56,7 +56,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Allen vs Evloev.jpg" alt="Allen vs Evloev">
+                    <img src="/imagenes/Allen vs Evloev.jpg" alt="Allen vs Evloev">
                     <p>Arnold Allen vs Movsar Evloev</p>
                 </button>
             </a>
