--- a/Carteleras/UFC298.html
+++ b/Carteleras/UFC298.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Volkanovski vs Topuria.jpg" alt="Volkanovski vs Topuria">
+                    <img src="/imagenes/Volkanovski vs Topuria.jpg" alt="Volkanovski vs Topuria">
                     <p>alexander Volkanovski vs Ilia Topuria</p>
                 </button>
             </a>
@@ -45,7 +45,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Cejudo vs Dvalishvili.jpg" alt="Cejudo vs Dvalishvili">
+                    <img src="/imagenes/Cejudo vs Dvalishvili.jpg" alt="Cejudo vs Dvalishvili">
                     <p>Henry Cejudo vs Merab Dvalishvili</p>
                 </button>
             </a>
@@ -54,7 +54,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Hernandez vs Aliskerov.jpg" alt="Hernandez vs Aliskerov">
+                    <img src="/imagenes/Hernandez vs Aliskerov.jpg" alt="Hernandez vs Aliskerov">
                     <p>anthony Hernandez vs Ikram Aliskerov</p>
                 </button>
             </a>
