--- a/Carteleras/UFC299.html
+++ b/Carteleras/UFC299.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes\Omalley vs Vera.jpg" alt="Omalley vs Vera">
+                    <img src="/imagenes/Omalley vs Vera.jpg" alt="Omalley vs Vera">
                     <p>Sean O'Malley vs Marlon Vera</p>
                 </button>
             </a>
