--- a/esqueleto.html
+++ b/esqueleto.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/.css" />
     <link rel="stylesheet" type="text/css" href="/css/layout.css" />
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico" />
+    <link rel="icon" href="/imagenes/LogoUFC.ico" />
     <title></title>
 </head>
 
