--- a/Carteleras/UFC285.html
+++ b/Carteleras/UFC285.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/css/EstiloCarteleras.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <link rel="icon" href="/imagenes\LogoUFC.ico">
+    <link rel="icon" href="/imagenes/LogoUFC.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <div class="fight-card">
                 <a href="/https://www.youtube.com/watch?v=RIZBnls_usM&pp=ygUNam9uZXMgdnMgZ2FuZQ%3D%3D" target="_BLANK">
                     <button>
-                        <img src="/imagenes\Jones vs Gane.jpg" alt="Jones vs Gane">
+                        <img src="/imagenes/Jones vs Gane.jpg" alt="Jones vs Gane">
                         <p>Jon Jones vs Ciryl Gane</p>
                     </button>
                 </a>
@@ -41,7 +41,7 @@
                 <a href="/https://www.youtube.com/watch?v=9X6ZJnLCr1c&pp=ygUUZ3Jhc3NvIHZzIHNoZXZjaGVua28%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Grasso vs Shevchenko.jpg" alt="Grasso vs Shevchenko">
+                        <img src="/imagenes/Grasso vs Shevchenko.jpg" alt="Grasso vs Shevchenko">
                         <p>Alexa Grasso vs valentina Shevchenko</p>
                     </button>
                 </a>
@@ -51,7 +51,7 @@
                 <a href="/https://www.youtube.com/watch?v=_Gj74F1dr7c&pp=ygURbmVhbCB2cyByYWtobW9ub3Y%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Neal vs Rakhmonov.jpg" alt="Neal vs Rakhmonov">
+                        <img src="/imagenes/Neal vs Rakhmonov.jpg" alt="Neal vs Rakhmonov">
                         <p>Geoff Neal vs Shavkat Rakhmonov</p>
                     </button>
                 </a>
@@ -61,7 +61,7 @@
                 <a href="/https://www.youtube.com/watch?v=tYNpRffdr0I&pp=ygUQZ2Ftcm90IHZzIHR1cm5lcg%3D%3D"
                     target="_BLANK">
                     <button>
-                        <img src="/imagenes\Gamrot vs Turner.jpg" alt="Gamrot vs Turner">
+                        <img src="/imagenes/Gamrot vs Turner.jpg" alt="Gamrot vs Turner">
                         <p>Mateusz Gamrot vs Jalin Turner</p>
                     </button>
                 </a>
